# restau_view

./: .env.development  .gitignore  LICENSE  README.md  debug_blocked_page.html  main.py  pyproject.toml  requirements.txt  test_date_extraction.py  test_html_parsing.py  test_review_extraction.py  test_review_structure.py  test_selenium.py
data/raw/: resturant_detail_review_page_html.html  zomato_restaurants.csv  zomato_reviews.csv
data/raw/debug/: full_review_page.html  review_section_1.html  review_section_2.html  review_section_3.html
docs/: README_ZOMATO_SCRAPER.md
examples/: zomato_scraper_examples.py
notebooks/: data_cleaning.ipynb
src/data/: __init__.py  preprocessing.py  scrape_zomato.py  scrape_zomato_review.py  scrape_zomato_review_phase_2.py  single_zomato_Review_scrape.py
src/scrapers/: __init__.py  zomato_scraper.py
src/utils/: __init__.py  helpers.py
tasks/: 01_project_idea.md  02_step_one.md
test/: extract_zomator_htmls.py  test_review_extraction.py  test_selenium.py
utils/: helpers.py
